RESOLVED FIXED292235
Nullptr crash in NetworkDataTaskCocoa constructor
https://bugs.webkit.org/show_bug.cgi?id=292235
Summary Nullptr crash in NetworkDataTaskCocoa constructor
p_choudhury
Reported 2025-04-28 19:23:50 PDT
Attachments
p_choudhury
Comment 1 2025-04-28 19:27:45 PDT
EWS
Comment 2 2025-04-29 14:09:43 PDT
Committed 294297@main (8a4582da742a): <https://commits.webkit.org/294297@main> Reviewed commits have been landed. Closing PR #44651 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.