Nullptr crash in NetworkDataTaskCocoa constructor https://bugs.webkit.org/show_bug.cgi?id=292235 rdar://149214672

Reviewed by Ryosuke Niwa and Alex Christensen.

Added message check for url validity.

* LayoutTests/ipc/coreipc.js:
(export.ArgumentSerializer):
* LayoutTests/ipc/invalid-url-network-data-task-crash-expected.txt: Added.
* LayoutTests/ipc/invalid-url-network-data-task-crash.html: Added.
* Source/WebKit/NetworkProcess/NetworkConnectionToWebProcess.cpp:
(WebKit::NetworkConnectionToWebProcess::loadImageForDecoding):
* Source/WebKit/NetworkProcess/cocoa/NetworkDataTaskCocoa.mm:
(WebKit::NetworkDataTaskCocoa::NetworkDataTaskCocoa):

Canonical link: https://commits.webkit.org/294297@main